k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: gestion-salaries-backend
spec:
  selector:
    app: gestion-salaries-backend
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
