k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: gestion-salaries-frontend
spec:
  selector:
    app: gestion-salaries-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
